# Star-Prison-Launcher

./: .gitignore  .prettierignore  AGENTS.md  README.en.md  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  release.ps1  run.sh  stylelint.config.js  sync-package-version.mjs  watch-release-assets.ps1
.cargo/: config.toml  lld-link.cmd
.github/scripts/: sync-local-app-config.mjs  sync-modpack-manifest.mjs  sync-release-archives.mjs  verify-distribution-assets.mjs  watch-release-archives.mjs
.github/workflows/: ci.yml  distribution-assets.yml  release-installer.yml  release-nsis.mjs  sync-package-version.mjs  sync-release-assets.yml
config/: app.config.json  client.config.json  distribution.json  server.manifest.json
src/: landing.html
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  bootstrap.rs  commands.rs  install_paths.rs  install_state.rs  installation.rs  launch.rs  launch_plan.rs  launch_utils.rs  lib.rs  main.rs  minecraft.rs  minecraft_process.rs  modpack.rs  protected_storage.rs  storage.rs  types.rs
src/app/: main.js  startup-intro.js  state.js  views.js
src/bridge/: tauri-api.js
src/components/: dom.js  overlay.js  terminal.js
src/controllers/: launcher.js  settings.js
src/services/: notices.js
src/styles/: app.css
src/views/: developer.js  landing.js  login.js  notices.js  settings.js
workers/discord-notices/: README.md  package.json  wrangler.toml
(+22 files in other folders)
