[package]
name = "star-prison-tauri"
version = "1.0.0"
description = "Windows dedicated server launcher for StarPrison"
authors = ["nobabo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "star_prison_tauri_lib"
crate-type = ["rlib"]

[dependencies]
dirs = "6"
base64 = "0.22"
getrandom = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = { version = "0.15", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
url = "2"
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(windows)'.build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = false
